--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-465.8KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-471.4KB/s(Youtube:不良林), server: x.mceee.xyz, port: 26031, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.99MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-247.3KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-7.02MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.11MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-280.5KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇨🇳 中国-7.41MB/s(Youtube:不良林), server: 116.129.253.227, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.31MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: a3fa58b581353bb375d2ddad0f327937a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.06MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
+  - {name: 🇮🇳 印度-1.71MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-465.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-465.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-465.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-465.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-465.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-465.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-465.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-907.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
