--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-4.22MB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39557, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
+  - {name: 🇨🇳 中国-7.58MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-994.5KB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39601, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
   - {name: 🇨🇳 中国-437.3KB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 39509, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
-  - {name: 🇨🇳 中国-485.8KB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39601, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
-  - {name: 🇨🇳 中国-5.25MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: 120.233.10.49, port: 39313, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: 120.233.10.49}}
-  - {name: 🇨🇳 中国-9.48MB/s(Youtube:不良林), server: 120.233.10.49, port: 29857, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: 120.233.10.49}}
-  - {name: 🇨🇳 中国-1.55MB/s(Youtube:不良林), server: jike1-cccn2.jiserver.xyz, port: 27805, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-cccn2.jiserver.xyz}}
   - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 39399, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
   - {name: 🇨🇳 中国-11.77MB/s(Youtube:不良林), server: x.mceee.xyz, port: 26011, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.15MB/s(Youtube:不良林), server: jike-gzyd.jiserver.xyz, port: 31861, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-gzyd.jiserver.xyz}}
   - {name: 🇨🇳 中国-569.4KB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39561, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
+  - {name: 🇨🇳 中国-805.4KB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 38511, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
+  - {name: 🇨🇳 中国-821.5KB/s(Youtube:不良林), server: jike1-cccn2.jiserver.xyz, port: 29855, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-cccn2.jiserver.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-994.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-994.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-994.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-994.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-994.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-994.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-994.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
