--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.55MB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39557, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
-  - {name: 🇨🇳 中国-9.85MB/s(Youtube:不良林), server: 120.233.10.49, port: 29857, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: 120.233.10.49}}
-  - {name: 🇨🇳 中国-380.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 39509, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
-  - {name: 🇨🇳 中国-6.34MB/s(Youtube:不良林), server: shlt.jiserver.xyz, port: 39411, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: shlt.jiserver.xyz}}
-  - {name: 🇨🇳 中国-632.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.21MB/s(Youtube:不良林), server: 116.129.253.227, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26250, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇰🇷 韩国-1.16MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 43.200.6.24, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-485.6KB/s(Youtube:不良林), server: x.mceee.xyz, port: 26041, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: hncu.relay.qchwnd.moe, port: 44612, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, sni: hncu.relay.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-921.7KB/s(Youtube:不良林), server: gdcm3.relay.qchwnd.moe, port: 44608, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, sni: gdcm3.relay.qchwnd.moe, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.38MB/s(Youtube:不良林), server: hncu.relay.qchwnd.moe, port: 44611, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, sni: hncu.relay.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.59MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
+  - {name: 🇬🇧 英国-798.2KB/s(Youtube:不良林), server: 144.24.76.223, port: 44600, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.25MB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.70MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-798.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-798.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-798.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-798.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-798.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-798.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-921.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-798.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
